tests/wsf/fail/juxtaposed_arith_positive.wsf
+1+ +2- +3* +4/ +5%
+'a'+ +'b'- +'c'* +'d'/ +'e'%
+0xaa+ +0xbb- +0xcc* +0xdd/ +0xee%
+0b10+ +0b11- +0b100* +0b101/ +0b110%
end
